--- a/knowledge/science/medical/pancreaticoduodenectomy/qna.yaml
+++ b/knowledge/science/medical/pancreaticoduodenectomy/qna.yaml
@@ -40,7 +40,7 @@ seed_examples:
       duodenal trauma, or chronic
 
       pancreatitis
-  - question: What are contradictions for a pancreaticoduodenectomy
+  - question: What are the contradictions of a pancreaticoduodenectomy?
     answer: >
       Absolute contraindications for the procedure are metastatic disease in the
       abdominal cavity or nearby
