--- a/knowledge/science/medical/pancreaticoduodenectomy/qna.yaml
+++ b/knowledge/science/medical/pancreaticoduodenectomy/qna.yaml
@@ -34,7 +34,7 @@ seed_examples:
 
       metastatic to the pancreas, multiple endocrine neoplasia type and
       gastrointestinal stromal tumors
-  - question: Are there any other indications for a whipple procedure?
+  - question: What are other indications for a Whipple procedure?
     answer: >
       Pancreaticoduodenectomy is also used for the treatment of pancreatic or
       duodenal trauma, or chronic
