--- a/knowledge/science/medical/pancreaticoduodenectomy/qna.yaml
+++ b/knowledge/science/medical/pancreaticoduodenectomy/qna.yaml
@@ -18,7 +18,7 @@ seed_examples:
       jejunum, gallbladder, and, occasionally,
 
       part of the stomach
-  - question: What are main indications for a whipple procedure
+  - question: What are the main indications for a Whipple procedure?
     answer: >
       Pancreaticoduodenectomy is most often performed as curative treatment for
       periampullary cancer, which
