Move scripts to make it easier for users to find
Placing the scripts in .github was a historical accident.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,6 @@ updates:
 
   # Maintain dependencies for Python scripts
   - package-ecosystem: "pip"
-    directory: "/.github/scripts"
+    directory: "/scripts"
     schedule:
       interval: "daily"
