--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -3,7 +3,7 @@
 ci:
   - changed-files:
       - any-glob-to-any-file:
-          - .github/scripts/**
+          - scripts/**
           - .github/workflows/**
           - .github/*.yml
 
