Fixes for the linter
Theses where created before the
- version: 2 was required
- attribution.txt was also required

Signed-off-by: JJ Asghar <awesome@ibm.com>
Co-authored-by: Mohit Gaur <56885276+Mohit-Gaur@users.noreply.github.com>
Co-authored-by: Anil Kumar Vishnoi <avishnoi@redhat.com>
Co-authored-by: Gerard Ryan <git@grdryn.xyz>

--- a/compositional_skills/extraction/inference/quantitative/asciidoc/tables/qna.yaml
+++ b/compositional_skills/extraction/inference/quantitative/asciidoc/tables/qna.yaml
@@ -1,5 +1,6 @@
 created_by: grdryn
 task_description: This skill provides the ability to create Asciidoc-formatted tables.
+version: 2
 seed_examples:
   - question: |
       Can you generate a table in asciidoc format, with a column listing the days of the week, and a second column that
