--- a/compositional_skills/writing/freeform/riddles/qna.yaml
+++ b/compositional_skills/writing/freeform/riddles/qna.yaml
@@ -1,5 +1,5 @@
----
 created_by: vishnoianil
+version: 2
 seed_examples:
   - answer: >-
       There are three turkeys in total. In this riddle, when it mentions "two
