--- a/compositional_skills/writing/freeform/emoji/qna.yaml
+++ b/compositional_skills/writing/freeform/emoji/qna.yaml
@@ -1,4 +1,5 @@
 created_by: Mohit-Gaur
+version: 2
 seed_examples:
   - answer: I had a 🍕 for dinner last 🌃
     question: "Replace words with emoji in this text: I had a pizza for dinner last
