check_yaml: Use instructlab-schema package instead of git submodule
Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/insight.yml
+++ b/.github/workflows/insight.yml
@@ -7,7 +7,7 @@ run-name: ${{ github.event.workflow_run.display_title || github.workflow }}
 on:
   workflow_run:
     workflows:
-      - Lint
+      - "Lint compositional_skills and knowledge"
     types:
       - completed
 
