Clean up label workflow
Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -3,7 +3,7 @@
 name: "Pull Request Labeler"
 
 on:
-- pull_request_target
+  pull_request_target:
 
 env:
   LC_ALL: en_US.UTF-8
@@ -29,22 +29,28 @@ jobs:
     - name: "Labeler Action"
       uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
         sync-labels: false
 
   add-comment:
-      if: github.event.label.name == 'triage-uncertain'
-      runs-on: ubuntu-latest
+      if: ${{ (github.event.action == 'labeled') && (github.event.label.name == 'triage-uncertain') }}
       permissions:
-        issues: write
+        pull-requests: write
+      runs-on: ubuntu-latest
       steps:
-        - name: Add comment
-          run: gh issue comment "$NUMBER" --body "$BODY"
+        - name: "Harden Runner"
+          uses: step-security/harden-runner@f086349bfa2bd1361f7909c78558e816508cdc10 # v2.8.0
+          with:
+            egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+
+        - name: "Add comment"
+          run: |
+            gh pr comment "${PULL_REQUEST_NUMBER}" --body "${PULL_REQUEST_COMMENT}"
           env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             GH_REPO: ${{ github.repository }}
-            NUMBER: ${{ github.event.issue.number }}
-            BODY: >
+            PULL_REQUEST_NUMBER: ${{ github.event.number }}
+            PULL_REQUEST_COMMENT: >
               Hi! So you've been marked as `triage-uncertain`, don't fret!
               This just means the triage team or member needs to discuss your PR during one of our [public meetings](https://github.com/instructlab/community/blob/main/Collaboration.md#triager-standup) before making a decision. (Yes! You are more then welcome to join us.)
               You have either made something amazing, or maybe hit a corner case that we hadn't thought of, or something like that.
