--- a/knowledge/tech_industry/ceo/lisa_su/qna.yaml
+++ b/knowledge/tech_industry/ceo/lisa_su/qna.yaml
@@ -3,20 +3,20 @@ version: 2
 domain: ceo
 seed_examples:
   - answer: |
-      Lisa Su is related to Nvidia CEO Jen Hsun Huang
-    question: what's fun fact about Lisa Su
+      Lisa Su is related to Nvidia CEO Jen Hsun Huang.
+    question: What's fun fact about Lisa Su?
   - answer: |
-      She immigrated to the with her parents from Taiwan
-    question: how old was lisa su when she moved to US
+      She immigrated to the with her parents from Taiwan when she was 3.
+    question: How old was Lisa Su when she moved to the US?
   - answer: |
       Lisa Su worked at TI, IBM, and Freescale Semiconductor
-    question: what companies Lisa Su worked at besides AMD
+    question: What companies has Lisa Su worked at besides AMD?
   - answer: |
       Lisa Su attended Bronx High
-    question: which high school she attended
+    question: Which high school Lisa Su attended
   - answer: |
       Lisa Su attended MIT for EE major
-    question: what college Lisa su attended and what major she studied for
+    question: what college Lisa su attended and what major did she study for?
 task_description: 'Train the model on who Lisa Su is.'
 document:
   repo: https://github.com/juliadenham/Summit_knowledge
